--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 <script src="mode.js"></script>
 
     <script>
-        const socket = io("http://localhost:5000");
+        // const socket = io("http://localhost:5000");
+        const socket = io("https://cash-counter.onrender.com");
         let username = "";
         let matchedUser = "";
 
